@@ -1,5 +1,11 @@
 2004-07-06  David Jee  <djee@redhat.com>
 
+	* jni/gtk-peer/gnu_java_awt_peer_gtk_GtkTextComponentPeer.c
+	(setCaretPosition): Scroll the text view so the new caret position
+	is visible on screen.
+
+2004-07-06  David Jee  <djee@redhat.com>
+
 	* gnu/java/awt/peer/gtk/GtkContainerPeer.java
 	(setBounds): Do not validate awtComponent here.
 	* gnu/java/awt/peer/gtk/GtkScrollPanePeer.java
